src/test/deca/context/invalid/homemade/tests/test312_nom_parametre/test312_nom_parametre_double2.deca
// test invalide de la règle 3.12

class Pinguin {
    int calcul(int a, float a){
        ; 
    }
}